--- a/render.yaml
+++ b/render.yaml
@@ -3,18 +3,5 @@ services:
   - type: web
     name: webdis
     runtime: docker
-    rootDir: webdis
+    rootDir: app
     healthCheckPath: /
-    envVars:
-      - key: REDIS_HOST
-        fromService:
-          type: redis
-          name: lightning
-          property: host # available properties are listed below
-      - key: REDIS_PORT
-        fromService:
-          type: redis
-          name: lightning
-          property: port
-      - fromGroup: conc-settings
-
